// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderBy matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OrderBy
    classes={
      Object {
        "button": "button",
        "card": "card",
        "cardWrap": "cardWrap",
        "icon": "icon",
        "link": "link",
        "option": "option",
        "show": "show",
        "wrap": "wrap",
      }
    }
    iconName="arrowDown"
    options={
      Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2",
          "value": 2,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="button"
          onClick={[Function]}
        >
          <Jss(Flexbox)
            display="inline-flex"
          >
            <Jss(Text)
              mid={true}
              small={true}
              tag="p"
            >
               
              
            </Jss(Text)>
            <Jss(Icon)
              className="icon"
              colors={
                Array [
                  "#777777",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />
          </Jss(Flexbox)>
        </div>,
        <div
          className="cardWrap"
          onClick={[Function]}
        >
          <Jss(Card)
            className="card"
          >
            <div
              className="option"
              onClick={[Function]}
            >
              <Jss(Text)
                className=""
                tag="p"
                value={1}
              >
                Option 1
              </Jss(Text)>
            </div>
            <div
              className="option"
              onClick={[Function]}
            >
              <Jss(Text)
                className=""
                tag="p"
                value={2}
              >
                Option 2
              </Jss(Text)>
            </div>
          </Jss(Card)>
        </div>,
      ],
      "className": "wrap",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Jss(Flexbox)
            display="inline-flex"
          >
            <Jss(Text)
              mid={true}
              small={true}
              tag="p"
            >
               
              
            </Jss(Text)>
            <Jss(Icon)
              className="icon"
              colors={
                Array [
                  "#777777",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />
          </Jss(Flexbox)>,
          "className": "button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Jss(Text)
                mid={true}
                small={true}
                tag="p"
              >
                 
                
              </Jss(Text)>,
              <Jss(Icon)
                className="icon"
                colors={
                  Array [
                    "#777777",
                  ]
                }
                iconName="arrowDown"
                transition="0.3s all"
              />,
            ],
            "display": "inline-flex",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  undefined,
                  " ",
                  "",
                ],
                "mid": true,
                "small": true,
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                " ",
                "",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "icon",
                "colors": Array [
                  "#777777",
                ],
                "iconName": "arrowDown",
                "transition": "0.3s all",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Jss(Card)
            className="card"
          >
            <div
              className="option"
              onClick={[Function]}
            >
              <Jss(Text)
                className=""
                tag="p"
                value={1}
              >
                Option 1
              </Jss(Text)>
            </div>
            <div
              className="option"
              onClick={[Function]}
            >
              <Jss(Text)
                className=""
                tag="p"
                value={2}
              >
                Option 2
              </Jss(Text)>
            </div>
          </Jss(Card)>,
          "className": "cardWrap",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={1}
                >
                  Option 1
                </Jss(Text)>
              </div>,
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={2}
                >
                  Option 2
                </Jss(Text)>
              </div>,
            ],
            "className": "card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  className=""
                  tag="p"
                  value={1}
                >
                  Option 1
                </Jss(Text)>,
                "className": "option",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Option 1",
                  "className": "",
                  "tag": "p",
                  "value": 1,
                },
                "ref": null,
                "rendered": "Option 1",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  className=""
                  tag="p"
                  value={2}
                >
                  Option 2
                </Jss(Text)>,
                "className": "option",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Option 2",
                  "className": "",
                  "tag": "p",
                  "value": 2,
                },
                "ref": null,
                "rendered": "Option 2",
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="button"
            onClick={[Function]}
          >
            <Jss(Flexbox)
              display="inline-flex"
            >
              <Jss(Text)
                mid={true}
                small={true}
                tag="p"
              >
                 
                
              </Jss(Text)>
              <Jss(Icon)
                className="icon"
                colors={
                  Array [
                    "#777777",
                  ]
                }
                iconName="arrowDown"
                transition="0.3s all"
              />
            </Jss(Flexbox)>
          </div>,
          <div
            className="cardWrap"
            onClick={[Function]}
          >
            <Jss(Card)
              className="card"
            >
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={1}
                >
                  Option 1
                </Jss(Text)>
              </div>
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={2}
                >
                  Option 2
                </Jss(Text)>
              </div>
            </Jss(Card)>
          </div>,
        ],
        "className": "wrap",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Jss(Flexbox)
              display="inline-flex"
            >
              <Jss(Text)
                mid={true}
                small={true}
                tag="p"
              >
                 
                
              </Jss(Text)>
              <Jss(Icon)
                className="icon"
                colors={
                  Array [
                    "#777777",
                  ]
                }
                iconName="arrowDown"
                transition="0.3s all"
              />
            </Jss(Flexbox)>,
            "className": "button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Jss(Text)
                  mid={true}
                  small={true}
                  tag="p"
                >
                   
                  
                </Jss(Text)>,
                <Jss(Icon)
                  className="icon"
                  colors={
                    Array [
                      "#777777",
                    ]
                  }
                  iconName="arrowDown"
                  transition="0.3s all"
                />,
              ],
              "display": "inline-flex",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    undefined,
                    " ",
                    "",
                  ],
                  "mid": true,
                  "small": true,
                  "tag": "p",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                  " ",
                  "",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "icon",
                  "colors": Array [
                    "#777777",
                  ],
                  "iconName": "arrowDown",
                  "transition": "0.3s all",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Jss(Card)
              className="card"
            >
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={1}
                >
                  Option 1
                </Jss(Text)>
              </div>
              <div
                className="option"
                onClick={[Function]}
              >
                <Jss(Text)
                  className=""
                  tag="p"
                  value={2}
                >
                  Option 2
                </Jss(Text)>
              </div>
            </Jss(Card)>,
            "className": "cardWrap",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  className="option"
                  onClick={[Function]}
                >
                  <Jss(Text)
                    className=""
                    tag="p"
                    value={1}
                  >
                    Option 1
                  </Jss(Text)>
                </div>,
                <div
                  className="option"
                  onClick={[Function]}
                >
                  <Jss(Text)
                    className=""
                    tag="p"
                    value={2}
                  >
                    Option 2
                  </Jss(Text)>
                </div>,
              ],
              "className": "card",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Jss(Text)
                    className=""
                    tag="p"
                    value={1}
                  >
                    Option 1
                  </Jss(Text)>,
                  "className": "option",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Option 1",
                    "className": "",
                    "tag": "p",
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "Option 1",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": <Jss(Text)
                    className=""
                    tag="p"
                    value={2}
                  >
                    Option 2
                  </Jss(Text)>,
                  "className": "option",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Option 2",
                    "className": "",
                    "tag": "p",
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": "Option 2",
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`OrderBy styles matches the snapshot 1`] = `
Object {
  "button": Object {
    "cursor": "pointer",
  },
  "card": Object {
    "@media screen and (min-width:768px)": Object {
      "padding": 24,
    },
    "padding": 16,
  },
  "cardWrap": Object {
    "marginTop": -16,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "right": 0,
    "top": "100%",
    "transition": "0.3s all",
    "zIndex": 1,
  },
  "icon": Object {
    "height": 14,
    "marginLeft": 4,
    "marginTop": 2,
    "width": 14,
  },
  "link": Object {
    "color": "#0946CB",
  },
  "option": Object {
    "&:not(:last-child)": Object {
      "paddingBottom": 8,
    },
    "cursor": "pointer",
    "whiteSpace": "nowrap",
  },
  "show": Object {
    "marginTop": 0,
    "opacity": 1,
    "pointerEvents": "auto",
  },
  "wrap": Object {
    "display": "inline-block",
    "position": "relative",
  },
}
`;

exports[`OrderByJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(OrderBy)
    iconName="arrowDown"
    options={
      Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2",
          "value": 2,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "button": "OrderBy-button-0-1-87",
        "card": "OrderBy-card-0-1-90",
        "cardWrap": "OrderBy-cardWrap-0-1-89",
        "icon": "OrderBy-icon-0-1-88",
        "link": "OrderBy-link-0-1-93",
        "option": "OrderBy-option-0-1-92",
        "show": "OrderBy-show-0-1-91",
        "wrap": "OrderBy-wrap-0-1-86",
      },
      "iconName": "arrowDown",
      "options": Array [
        Object {
          "text": "Option 1",
          "value": 1,
        },
        Object {
          "text": "Option 2",
          "value": 2,
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "button": "OrderBy-button-0-1-87",
          "card": "OrderBy-card-0-1-90",
          "cardWrap": "OrderBy-cardWrap-0-1-89",
          "icon": "OrderBy-icon-0-1-88",
          "link": "OrderBy-link-0-1-93",
          "option": "OrderBy-option-0-1-92",
          "show": "OrderBy-show-0-1-91",
          "wrap": "OrderBy-wrap-0-1-86",
        },
        "iconName": "arrowDown",
        "options": Array [
          Object {
            "text": "Option 1",
            "value": 1,
          },
          Object {
            "text": "Option 2",
            "value": 2,
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
